--- a/app/refinance/lender-preferences/LenderPreferences.css
+++ b/app/refinance/lender-preferences/LenderPreferences.css
@@ -1,31 +1,5 @@
-.loan-preference-form-container {
-  background-color: rgb(134 138 167 / 48%);
-  height: 70vh;
-  padding: 10px;
-  margin-top: 50px;
-  margin-bottom: 35px;
-}
-
-.lender-preference {
-  width: 50vw;
-}
-
-.form-check-label {
-  color: black;
-  font-size: 1.4rem;
-}
-
-.form-check-input {
-  font-size: 1.4rem;
-}
-
 @media (max-width: 768px) {
-  .loan-preference-form-container {
-    height: 100vh;
-  }
-
-  .btn-submit {
-    font-size: 1rem !important;
-    padding: 1rem !important;
+  .container .lender-container {
+    margin-bottom: 100px;
   }
 }
